--- a/ReactifyNetwork/en.lproj/MainStoryboard.storyboard
+++ b/ReactifyNetwork/en.lproj/MainStoryboard.storyboard
@@ -88,6 +88,9 @@
                                         <state key="highlighted">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="sendButtonPressed:" destination="q7h-Gu-ffe" eventType="touchUpInside" id="ZJs-sg-h9a"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.28406010840000001" green="0.28406010840000001" blue="0.28406010840000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -122,6 +125,7 @@
                     <connections>
                         <outlet property="inputEMailField" destination="jE2-UQ-TsD" id="Bdk-9O-2q6"/>
                         <outlet property="recipientsTableView" destination="a6s-BO-RKj" id="TP8-QZ-Grt"/>
+                        <outlet property="sendButton" destination="B6m-JY-xW6" id="6wy-ew-PhV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qcT-TO-Ngb" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -346,10 +350,10 @@
                                 </constraints>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DefaultProjectCell" textLabel="RPO-xR-hzk" style="IBUITableViewCellStyleDefault" id="dOf-t8-8OD">
-                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="22" width="321" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="321" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RPO-xR-hzk">
@@ -468,15 +472,15 @@
         <scene sceneID="74b-Vv-Eum">
             <objects>
                 <tabBarController definesPresentationContext="YES" id="g42-Wo-KbY" sceneMemberID="viewController">
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="3el-vX-sx7">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="fxi-oe-3nB" kind="relationship" relationship="viewControllers" id="ul2-es-yux"/>
                         <segue destination="q7h-Gu-ffe" kind="relationship" relationship="viewControllers" id="UcZ-dr-Zfc"/>
+                        <segue destination="fxi-oe-3nB" kind="relationship" relationship="viewControllers" id="ul2-es-yux"/>
                         <segue destination="zOf-Zo-Kmq" kind="relationship" relationship="viewControllers" id="jKx-WU-TSL"/>
                         <segue destination="t2Q-RG-aS9" kind="relationship" relationship="viewControllers" id="vRs-2k-dWa"/>
                     </connections>
@@ -486,37 +490,6 @@
             <point key="canvasLocation" x="652" y="165"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="RNLogViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RNLogViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="logTableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="RNProjectsViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RNProjectsViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="projectsTableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="RNRecipientsViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RNRecipientsViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="inputEMailField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="recipientsTableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="RNSettingsViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RNSettingsViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="defaultProjectsTableView" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="eventNameField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
